[gd_scene load_steps=2 format=3 uid="uid://cfh3r1ruou4l2"]

[ext_resource type="Script" uid="uid://y74vj50c3yq" path="res://Scripts/run_summary.gd" id="1_3mjj1"]

[node name="RunSummary" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3mjj1")

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MainContainer/LeftPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Run Summary"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer/LeftPanel"]
layout_mode = 2

[node name="RunDetailsContainer" type="VBoxContainer" parent="MainContainer/LeftPanel"]
layout_mode = 2

[node name="GodDeckInfo" type="Label" parent="MainContainer/LeftPanel/RunDetailsContainer"]
layout_mode = 2

[node name="OutcomeLabel" type="Label" parent="MainContainer/LeftPanel/RunDetailsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Victory!"
horizontal_alignment = 1

[node name="ExpSummaryLabel" type="Label" parent="MainContainer/LeftPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Experience Gained"
horizontal_alignment = 1

[node name="TotalExpContainer" type="HBoxContainer" parent="MainContainer/LeftPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CaptureTotal" type="Label" parent="MainContainer/LeftPanel/TotalExpContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚öîÔ∏è Total Capture: 0"

[node name="VSeparator" type="VSeparator" parent="MainContainer/LeftPanel/TotalExpContainer"]
layout_mode = 2

[node name="DefenseTotal" type="Label" parent="MainContainer/LeftPanel/TotalExpContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "üõ°Ô∏è Total Defense: 0"

[node name="ButtonContainer" type="HBoxContainer" parent="MainContainer/LeftPanel"]
layout_mode = 2

[node name="NewRunButton" type="Button" parent="MainContainer/LeftPanel/ButtonContainer"]
layout_mode = 2
text = "Start New Run"

[node name="MainMenuButton" type="Button" parent="MainContainer/LeftPanel/ButtonContainer"]
layout_mode = 2
text = "Main Menu"

[node name="RightPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="CardDetailsContainer" type="VBoxContainer" parent="MainContainer/RightPanel"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="MainContainer/LeftPanel/ButtonContainer/NewRunButton" to="." method="_on_new_run_button_pressed"]
[connection signal="pressed" from="MainContainer/LeftPanel/ButtonContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
